# awc_inference

./: .gitignore  DOCUMENTATION.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  publish.bat  publish.sh  pyproject.toml
awc_helpers/: __init__.py  awc_inference.py  format_utils.py  math_utils.py
