[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awc-helpers"
version = "0.1.1"
description = "Australian Wildlife Conservancy's Wildlife detection and species classification inference tools"
readme = "README.md"
license = "LicenseRef-CC-BY-NC-SA-4.0"
requires-python = ">=3.9"
authors = [
    { name = "Quan Tran" }
]
keywords = ["wildlife", "detection", "classification", "megadetector", "camera-trap", "ecology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "torch==2.9.1",
    "megadetector<=10.0.17",
    "ultralytics<=8.4.7",
    "timm<=1.0.24"
]

[project.urls]
Homepage = "https://github.com/Australian-Wildlife-Conservancy-AWC/awc_inference"
Repository = "https://github.com/Australian-Wildlife-Conservancy-AWC/awc_inference"
Issues = "https://github.com/Australian-Wildlife-Conservancy-AWC/awc_inference/issues"
